// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration filter 1`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "id": "alice",
      "table": "user",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "id": "bob",
      "table": "user",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "id": "charlie",
      "table": "user",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration filter 2`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "id": "alice",
      "table": "user",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration filter 3`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "id": "alice",
      "table": "user",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "id": "charlie",
      "table": "user",
    },
    "name": "Charlie",
  },
]
`;
